# RealtimeAIVoiceChat

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  styles.css
config/: settings.py
core/: _prompts.py  llm_agent.py  pipeline.py  protocols.py  stt.py  tts.py  utils.py  vad.py
core/agents/: __init__.py  airline_agent.py
static/css/: style.css
static/js/: main.js  pcmWorkletProcessor.js  ttsPlaybackProcessor.js  visualizer.js
templates/: index.html
